--- a/index.html
+++ b/index.html
@@ -1,40 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <!--Inizio header-->
     <header>
-       <nav>
-        <div class="container">
-            <div class="row">
-                <div class="col-6 navbar">
-                    <a class="nav-link" href="#">START BOOTSTRAP</a>
-                </div>
-                <div class="col-6 navbar">
-                    <a class="nav-link" href="#">PORTAFOLIO</a>
-                    <a class="nav-link" href="#">ABOUT</a>
-                    <a class="nav-link" href="#">CONTACT</a>
+        <nav>
+            <div class="container">
+                <div class="row">
+                    <div class="col-8 navbar">
+                        <a class="nav-link" href="#">START BOOTSTRAP</a>
+                    </div>
+                    <div class="col-4 navbar">
+                        <a class="nav-link" href="#">PORTAFOLIO</a>
+                        <a class="nav-link" href="#">ABOUT</a>
+                        <a class="nav-link" href="#">CONTACT</a>
+                    </div>
                 </div>
             </div>
-
-        </div>
-       </nav>
+        </nav>
     </header>
 
-     <!--Inizio footer-->
+    <!--Inizio Main-->
 
-    <main></main>
+    <main>
+        <div id="b-turquoise">
+            <div class="container">
+                <div class="row justify-content-center ">
+                    <div class="col-6 c-white text-center">
+                        <img class="img-fluid img-size" src="img/avatar.svg" alt="">
+                        <h3>START BOOTSTRAP</h3>
+
+                        <div class="row justify-content-center">
+                            <div class="col-2 ">
+                                <hr>
+                            </div>
+                            <div class="col-1 "><i class="fas fa-star"></i></div>
+                            <di class="col-2 ">
+                                <hr>
+                        </div>
+                    </div>
+                    <h6 class="c-white text-center"> GRAPHIT ARTIST-WEB DESIGNER- ILUSTRATOR</h6>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-6">
+                    <h6 class="text-center">PORTAFOLIO</h6>
+                    <div class="row justify-content-center">
+                        <div class="col-2 "><hr> </div>
+                        <div class="col-1 "><i class="fas fa-star"></i></div>
+                        <di class="col-2 "> <hr></div>
+                    </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4  p-2">
+                    <img class="img-fluid" src="img/cabin.png" alt="cabin">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4  p-2">
+                    <img class="img-fluid" src="img/cake.png" alt="cake">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4  p-2">
+                    <img class="img-fluid" src="img/circus.png" alt="circus">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4  p-2">
+                    <img class="img-fluid" src="img/game.png" alt="game">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4  p-2">
+                    <img class="img-fluid" src="img/safe.png" alt="safe">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4  p-2">
+                    <img class="img-fluid" src="img/submarine.png" alt="safe">
+                </div>
+            </div> 
+        </div>
+
+
+
+        
+        </div>
+        </div>
+    </main>
+
+    <!--Inizio footer-->
 
     <footer></footer>
-    
+
 </body>
+
 </html>
