layout about-us
layout about-us

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--Inizio Main-->
 
     <main>
-        <div id="b-turquoise">
+        <div class="b-turquoise">
             <div class="container">
                 <div class="row justify-content-center ">
                     <div class="col-6 c-white text-center">
@@ -62,10 +62,14 @@
                 <div class="col-6">
                     <h6 class="text-center">PORTAFOLIO</h6>
                     <div class="row justify-content-center">
-                        <div class="col-2 "><hr> </div>
+                        <div class="col-2 ">
+                            <hr>
+                        </div>
                         <div class="col-1 "><i class="fas fa-star"></i></div>
-                        <di class="col-2 "> <hr></div>
+                        <di class="col-2 ">
+                            <hr>
                     </div>
+                </div>
             </div>
         </div>
         <div class="container">
@@ -88,14 +92,63 @@
                 <div class="col-sm-12 col-md-6 col-lg-4  p-2">
                     <img class="img-fluid" src="img/submarine.png" alt="safe">
                 </div>
-            </div> 
+            </div>
         </div>
 
+        <div class="b-turquoise">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-6 c-white">
+                        <h6 class="text-center">ABOUT</h6>
+                        <div class="row justify-content-center">
+                            <div class="col-2">
+                                <hr>
+                            </div>
+                            <div class="col-1 "><i class="fas fa-star"></i></div>
+                            <di class="col-2 ">
+                                <hr>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 c-white">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod itaque expedita veniam
+                            perspiciatis voluptate illum delectus mollitia quis ad sint ullam voluptatibus totam commodi
+                            quasi deserunt, quibusdam iste sit illo.
+                            Alias tempore inventore voluptatum libero eos dolorum voluptates adipisci optio a deserunt
+                            quisquam at eius dolore, rem autem repellat error esse corporis consequuntur sunt vitae
+                            maiores. Fugiat inventore facilis impedit?</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 c-white">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod itaque expedita veniam
+                            perspiciatis voluptate illum delectus mollitia quis ad sint ullam voluptatibus totam commodi
+                            quasi deserunt, quibusdam iste sit illo.
+                            Alias tempore inventore voluptatum libero eos dolorum voluptates adipisci optio a deserunt
+                            quisquam at eius dolore, rem autem repellat error esse corporis consequuntur sunt vitae
+                            maiores. Fugiat inventore facilis impedit?</p>
+                    </div>
+                </div>
+            </div>
+         </div>
+         <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-6 ">
+                    <h6 class="text-center">CONTACT ME</h6>
+                    <div class="row justify-content-center">
+                        <div class="col-2">
+                            <hr>
+                        </div>
+                        <div class="col-1 "><i class="fas fa-star"></i></div>
+                        <di class="col-2 ">
+                            <hr>
+                    </div>
+                </div>
+                
+
+            </div>
 
 
-        
-        </div>
-        </div>
     </main>
 
     <!--Inizio footer-->
