modify header and jumbotron

--- a/index.html
+++ b/index.html
@@ -17,42 +17,37 @@
 
     <!--Inizio header-->
     <header>
-        <nav class="navbar-expand-lg b-navy-blue ">
-            <div class="container ">
-                <div class="row">
-                    <div class="col-8 navbar">
-                        <a class="navbar-brand c-white" href="#">Bootstrap</a>
-                        <button class="navbar-toggler b-white " type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon "></span>
-                        </button>
-                    </div>
-                    <div class="col-4 navbar">
-                        <div class="collapse navbar-collapse " id="navbarNav">
-                            <ul class="navbar-nav px-4">
-                                <li class="nav-item">
-                                    <a class="nav-link  c-white" aria-current="page" href="#">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link c-white" href="#">Features</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link c-white" href="#">Pricing</a>
-                                </li>
-                            </ul>
+        <div class="container ">
+            <nav class="navbar navbar-expand-lg b-navy-blue fixed-top">
+                <a class="navbar-brand c-white" href="#">Bootstrap</a>
+                <button class="navbar-toggler b-white " type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon "></span>
+                </button>
 
 
-                        </div>
-                    </div>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav px-4">
+                        <li class="nav-item">
+                            <a class="nav-link  c-white" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link c-white" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link c-white" href="#">Pricing</a>
+                        </li>
+                    </ul>
                 </div>
-        </nav>
+            </nav>
+        </div>
     </header>
 
     <!--Inizio Main-->
 
     <main>
-        <div class="b-turquoise containerJumbotron">
+        <div class="b-turquoise">
             <div class="container jumbotron">
                 <div class="row justify-content-center  ">
                     <div class="col-6 c-white text-center">
@@ -198,15 +193,15 @@
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Message</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                      </div>
+                    </div>
 
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div>
-                   
+
                     <button type="submit" class="btn btn-secondary b-turquoise c-white">Submit</button>
-               
+
                 </form>
             </div>
     </main>
@@ -223,10 +218,10 @@
                     </div>
                     <div class="col-sm-12 col-md-4 text-center">
                         <h6>AROUNT THE WEB</h6>
-                        <i class="fab fa-facebook"></i>
-                        <i class="fab fa-google"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-linkedin"></i>
+                        <i class="fab fa-facebook icone"></i>
+                        <i class="fab fa-google icone"></i>
+                        <i class="fab fa-twitter icone"></i>
+                        <i class="fab fa-linkedin icone"></i>
                     </div>
                     <div class="col-sm-12 col-md-4 text-center">
                         <h6>ABOUT FREELANCER</h6>
