--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <!--Inizio header-->
     <header>
-        <div class="container ">
+        <div class="container">
             <nav class="navbar navbar-expand-lg b-navy-blue fixed-top">
-                <a class="navbar-brand c-white" href="#">Bootstrap</a>
+                <a class="navbar-brand c-white px-4" href="#">Bootstrap</a>
                 <button class="navbar-toggler b-white " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
